updated  main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,19 @@
 name: Custom use case
 
 on:
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
+
+  workflow_dispatch:
+    inputs:
+      mode:
+        description: 'Choose action: launch or destroy'
+        required: true
+        type: choice
+        options:
+          - launch
+          - destroy
 
 jobs:
   deploy:
