--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
         required: true
         type: choice
         options:
-          - launch
+          - apply
           - destroy
 
 jobs:
@@ -39,6 +39,7 @@ jobs:
           AWS_REGION: us-east-1
 
       - name: Terraform Apply
+        if: github.event.inputs.action == 'apply'
         run: terraform apply -auto-approve
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
