modified workflow main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
     inputs:
       mode:
-        description: 'Choose action: launch or destroy'
+        description: 'Choose action: apply or destroy'
         required: true
         type: choice
         options:
@@ -36,7 +36,16 @@ jobs:
         #   terraform_version: 1.6.6
 
       - name: Terraform Init
+        id: init
         run: terraform init
+       
+      - name: Terraform Format Check
+        id: fmt
+        run: terraform fmt -recursive
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
 
       - name: Terraform Plan
         run: terraform plan
