updated tf test in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,15 @@ jobs:
         id: validate
         run: terraform validate
 
+      - name: Terraform test
+        id: test
+        run: terraform test
+        continue-on-error: true 
+      
+      - name: Run tfsec
+        uses: aquasecurity/tfsec-action@v1.0.0
+        continue-on-error: true
+
       - name: Terraform Plan
         run: terraform plan
 
